# afd-icon

./: Dockerfile  index.html  main.py  manifest.yaml  pyproject.toml
.github/workflows/: docker-image.yml
