[tool.poetry]
name = "afd"
version = "0.1.0"
description = ""
authors = ["Oliver Ni <oliver.ni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^9.0.1"
starlette = "^0.19.0"
uvicorn = "^0.17.6"
httpx = "^0.22.0"
Jinja2 = "^3.1.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100